--- a/style.css
+++ b/style.css
@@ -21,15 +21,31 @@ left: 0;
   display:flex;
   justify-content:center;
   align-items:center;
-  margin: -5px  auto;
+  margin: -5px 300px;
 }
 
 .right{
   display:flex;
-  justify-content:right;
+  justify-content:flex-end;
   align-items:center;
 }
 
 .right a{
   padding: 0px 30px;
+  font-family: "Raleway";
+  color: #f4d03f;
+  font-size: 17px;
+}
+
+.left{
+  display:flex;
+  justify-content:left;
+  align-items:center;
+}
+
+.left a{
+  padding: 0px 30px;
+  font-family: "Raleway";
+  color: #f4d03f;
+  font-size: 17px;
 }
